--- a/views/location.erb
+++ b/views/location.erb
@@ -18,19 +18,23 @@
     <!-- Your own CSS -->
     <link rel="stylesheet" href="/styles.css">
 
-    <title>News</title>
+    <title>Location</title>
   </head>
   <body>
+        <div class="jumbotron jumbotron-fluid">
+            <div class="container">
+                <h1 class="display-4">News and Weather</h1>
+                <p class="lead">Please enter your United States city of choice to find out weather and news!</p>
+            </div>
+        </div>
 
-    <div class="container mt-5">
-      <h1>News</h1>
-<p>
-     <%= "In #{@location}, it is currently #{@current_temperature} and #{@conditions}" %>
-</p>
-     <p>
-        <a href="/" class="btn btn-primary">Go Back</a>
-     </p>
-    </div>
+        <div class="container mt-5">
+        <h1>Enter Location</h1>
+        <form action="/news">
+            <input type="text" name="q">
+            <button type="submit">Retrieve temperature and news</submit>
+        </form>
+        </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
