--- a/views/location.erb
+++ b/views/location.erb
@@ -24,7 +24,7 @@
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
                 <h1 class="display-4">News and Weather</h1>
-                <p class="lead">Please enter your United States city of choice to find out weather and news!</p>
+                <p class="lead">Please enter your city of choice to find out weather and news!</p>
             </div>
         </div>
 
