--- a/views/location.erb
+++ b/views/location.erb
@@ -19,23 +19,39 @@
     <link rel="stylesheet" href="/styles.css">
 
     <title>Location</title>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="/">
+            <span style="font-size: 32px; color: black;">
+                <i class="fas fa-bolt"></i>
+            </span>
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+            </li>
+            </ul>
+            <form class="form-inline my-2 my-lg-0" action = "/news">
+            <input class="form-control mr-sm-2" type="text" name="q" placeholder="Enter City Here" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
+        </div>
+    </nav>
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <h1 class="display-4">News and Weather</h1>
+            <p style = "text-align: center;" class="lead">Please enter your city of choice to find out weather and news!</p>
+        </div>
+    </div>
   </head>
   <body>
-        <div class="jumbotron jumbotron-fluid">
-            <div class="container">
-                <h1 class="display-4">News and Weather</h1>
-                <p class="lead">Please enter your city of choice to find out weather and news!</p>
-            </div>
-        </div>
-
-        <div class="container mt-5">
-        <h1>Enter Location</h1>
-        <form action="/news">
-            <input type="text" name="q">
-            <button type="submit">Retrieve temperature and news</submit>
-        </form>
-        </div>
-
+    <div class="container">
+        <img class="rounded mx-auto d-block" src="https://scx2.b-cdn.net/gfx/news/hires/2013/thestormthat.jpg" height=75% width=50% >
+    </div> 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
