--- a/views/ask.erb
+++ b/views/ask.erb
@@ -46,7 +46,7 @@
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
             <h1 class="display-4" style = "text-align: center;">This week in <%= @location %> </h1>
-            <p class="lead" style = "text-align: center;"><%= "It is currently #{@current_temperature} and #{@conditions}" %></p>
+            <p class="lead" style = "text-align: center;"><%= "It is currently #{@current_temperature} and #{@current_conditions}" %></p>
         </div>
     </div>
 
